# collaborative_edge_mesh

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: config.py  gateway_main.py  hash_chain.py  models.py  node_main.py  simulator_main.py
src/crdt/: __init__.py  gcounter.py  lww_register.py  orset.py  pncounter.py  state.py
src/services/: __init__.py  docker_manager.py  gateway.py  gossip.py  intake.py  scenarios.py
src/static/: app.js  index.html  style.css
src/storage/: __init__.py  sqlite_store.py
tests/: test_crdt_payloads.py  test_docker_manager.py  test_gateway_service.py  test_gossip_service.py  test_intake_service.py  test_scenarios_service.py
tests/integration/: test_state_merge_integration.py
