[project]
name = "collaborative-edge-mesh"
version = "0.1.0"
description = "Collaborative Disaster Analytics: Resilient Edge Mesh with CRDT-based State Sync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "structlog",
    "pydantic",
    "aiohttp",
    "docker",
    "pytest",
    "ruff>=0.15.1",
]

